# synapse-lang

./: .bandit  .env.gcp  .env.railway  .gcloudignore  .gitattributes  .gitignore  .npmignore  .pypirc.template  ACHIEVEMENT_SUMMARY.md  AI_ML_PLATFORM_SUMMARY.md  ANNOUNCEMENT_POSTS.md  BACKEND_CAPABILITIES.md  BACKEND_POC_README.md  CHANGELOG.md  CLAUDE.md  CNAME  CODESPACES_SETUP.md  CODE_STATISTICS.md  COMMUNITY.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_DEV_REPORT.md  COMPREHENSIVE_LAUNCH_PLAN.md  DEPLOY_CLEAN_DESIGN.bat  DEPLOY_EMOJI_FIX.bat  DEPLOY_ENHANCEMENTS.bat  DEPLOY_FIX.bat  DEPLOY_NEW_DESIGN.bat  DEPLOY_NOW.bat  DEPLOY_TO_FLYIO_NOW.md  DEVELOPMENT_ROADMAP.md  DISCORD_SETUP.md  DOCKER_PUBLISHING_GUIDE.md  DOCKER_PUBLISHING_STATUS.md  DOCKER_PUBLISH_v2.3.2.md  DOCKER_README.md  DOCKER_STATUS.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FINAL_PUBLISHING_SUMMARY.md  INSTALL.md  (+164 more)
.devcontainer/: devcontainer.json  welcome.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
ai_ml_platform/: __init__.py
api-gateway/: package-lock.json  package.json  server.js
auth_system/: api_docs.html  requirements.txt
branding/: LOGO_KIT.html
cloud-platform/: .env.example  README.md  deploy.sh  docker-compose.yml
conda-recipe/: meta.yaml
crowehub/: README.md  index.html  server.py  simple_server.py
dashboard/: .vercelignore  LAUNCH.md  README.md  launch.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
deployment/: .env.example  deploy.sh  deploy.yaml  nginx.conf
docker-mcp-stripe/: .env.example  Dockerfile  README.md  claude-desktop-config.json  docker-compose.yml  docker-mcp-client.js  requirements.txt  setup-claude-desktop.bat  start.sh
docs/: CNAME  index.html
docs-website/: .env.example  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.minimal  Dockerfile.production  Dockerfile_v2  FLY_DEPLOY.md  app.py  app_minimal.py  app_v2.py  app_v2_socket.py  code_executor.py  deploy_minimal.bat  deploy_playground_fix.bat  deploy_playground_fix.sh  deploy_v2.bat  deploy_v2.sh  deploy_v2_debug.bat  deploy_v2_fixed.bat  fix_deployment.bat  fly.toml  fly.toml.simple  index.py  requirements.txt  requirements_v2.txt  test_build.bat  vercel.json
examples/: bb84_qkd.qnet  climate_model.py  demo_all_features.py  hello.syn  hello_synapse.syn  hybrid_quantum_classical.syn  parallel.syn  quantum_bell.syn  quantum_chemistry_hybrid.py  quantum_cryptography.py  quantum_demo.py  quantum_internet.qnet  quantum_machine_learning.py  quantum_teleportation.qflow  showcase_all_features.py  simple_demo.py  synapse_demo.ipynb  uncertainty.syn  vqe_circuit.qflow
payment-integration/: .env.example  .env.production  DEPLOYMENT_CHECKLIST.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  coinbase-setup.md  deploy.sh  email_service.py  (+11 more)
quantum-net/: README.md  advanced_quantum_networking.py  create_stubs.sh  pyproject.toml  setup.py
quantum-net/docs/: INTEROP.md  QNR_IR.md  SPEC.md
quantum-net/examples/: backbone.qnet  qkd_demo.qnet  teleport_demo.qnet
quantum-net/qnet_lang/: tokens.py
quantum-net/synapse_quantum_net.egg-info/: PKG-INFO
quantum-net/tests/: test_parser.py  test_sim_teleport.py
(+257 files in other folders)
