[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-lang"
version = "0.2.2"
description = "A language for deep scientific reasoning and parallel thought processing"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [ { name = "Michael Benjamin Crowe" } ]
keywords = [
  "scientific-computing",
  "parallel-processing",
  "uncertainty-quantification",
  "programming-language",
  "interpreter",
  "scientific-reasoning",
  "quantum-computing",
  "climate-modeling",
  "drug-discovery",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "sympy>=1.9",
  "matplotlib>=3.4.0",
  "qiskit>=0.34.0",
  "pennylane>=0.20.0",
  "cirq>=0.13.0",
  "networkx>=2.6",
  "pandas>=1.3.0",
  "numba>=0.56.0",
  "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=3.0.0",
  "black>=22.0.0",
  "flake8>=4.0.0",
  "ruff>=0.5.0",
  "mypy>=0.950",
  "pre-commit>=2.19.0",
]
docs = [
  "sphinx>=4.5.0",
  "sphinx-rtd-theme>=1.0.0",
]
jupyter = [
  "jupyterlab>=3.4.0",
  "ipykernel>=6.15.0",
]

[project.urls]
Homepage = "https://github.com/MichaelCrowe11/synapse-lang"
Source = "https://github.com/MichaelCrowe11/synapse-lang"
Issues = "https://github.com/MichaelCrowe11/synapse-lang/issues"
Documentation = "https://github.com/MichaelCrowe11/synapse-lang/blob/master/LANGUAGE_SPEC.md"

[project.scripts]
synapse = "synapse_lang.synapse_interpreter:main"
qflow = "qubit_flow_lang:placeholder"
qnet = "quantum_net_lang:placeholder"

[tool.setuptools.packages.find]
include = ["synapse_lang", "synapse_lang.*", "qubit_flow_lang", "quantum_net_lang"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "W"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.coverage.run]
source = ["synapse_lang"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
